# manim_cs

./: .gitignore  README.md  pyproject.toml
examples/: basic.py
src/list/: __init__.py
